--- a/css/output.css
+++ b/css/output.css
@@ -247,8 +247,14 @@
   .z-2000 {
     z-index: 2000;
   }
+  .mx-0 {
+    margin-inline: calc(var(--spacing) * 0);
+  }
   .mx-auto {
     margin-inline: auto;
+  }
+  .-mt-7 {
+    margin-top: calc(var(--spacing) * -7);
   }
   .-mt-7\.5 {
     margin-top: calc(var(--spacing) * -7.5);
@@ -258,6 +264,9 @@
   }
   .-mt-18 {
     margin-top: calc(var(--spacing) * -18);
+  }
+  .-mt-22 {
+    margin-top: calc(var(--spacing) * -22);
   }
   .-mt-22\.5 {
     margin-top: calc(var(--spacing) * -22.5);
@@ -280,6 +289,9 @@
   .mt-16 {
     margin-top: calc(var(--spacing) * 16);
   }
+  .mt-40 {
+    margin-top: calc(var(--spacing) * 40);
+  }
   .mt-\[94px\] {
     margin-top: 94px;
   }
@@ -300,6 +312,9 @@
   }
   .-mb-15 {
     margin-bottom: calc(var(--spacing) * -15);
+  }
+  .mb-0 {
+    margin-bottom: calc(var(--spacing) * 0);
   }
   .mb-0\! {
     margin-bottom: calc(var(--spacing) * 0) !important;
@@ -349,6 +364,9 @@
   .mb-16 {
     margin-bottom: calc(var(--spacing) * 16);
   }
+  .mb-19 {
+    margin-bottom: calc(var(--spacing) * 19);
+  }
   .mb-19\.5 {
     margin-bottom: calc(var(--spacing) * 19.5);
   }
@@ -397,6 +415,12 @@
   .hidden\! {
     display: none !important;
   }
+  .inline {
+    display: inline;
+  }
+  .table {
+    display: table;
+  }
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
@@ -427,14 +451,23 @@
   .h-19 {
     height: calc(var(--spacing) * 19);
   }
+  .h-33 {
+    height: calc(var(--spacing) * 33);
+  }
   .h-33\.5\! {
     height: calc(var(--spacing) * 33.5) !important;
   }
   .h-74 {
     height: calc(var(--spacing) * 74);
   }
+  .h-82 {
+    height: calc(var(--spacing) * 82);
+  }
   .h-125 {
     height: calc(var(--spacing) * 125);
+  }
+  .h-130 {
+    height: calc(var(--spacing) * 130);
   }
   .h-185 {
     height: calc(var(--spacing) * 185);
@@ -475,6 +508,9 @@
   .w-8 {
     width: calc(var(--spacing) * 8);
   }
+  .w-10 {
+    width: calc(var(--spacing) * 10);
+  }
   .w-10\! {
     width: calc(var(--spacing) * 10) !important;
   }
@@ -487,11 +523,17 @@
   .w-18 {
     width: calc(var(--spacing) * 18);
   }
+  .w-30 {
+    width: calc(var(--spacing) * 30);
+  }
   .w-30\! {
     width: calc(var(--spacing) * 30) !important;
   }
   .w-40 {
     width: calc(var(--spacing) * 40);
+  }
+  .w-41 {
+    width: calc(var(--spacing) * 41);
   }
   .w-41\.5 {
     width: calc(var(--spacing) * 41.5);
@@ -499,8 +541,14 @@
   .w-42 {
     width: calc(var(--spacing) * 42);
   }
+  .w-44 {
+    width: calc(var(--spacing) * 44);
+  }
   .w-44\.5 {
     width: calc(var(--spacing) * 44.5);
+  }
+  .w-46 {
+    width: calc(var(--spacing) * 46);
   }
   .w-46\.5 {
     width: calc(var(--spacing) * 46.5);
@@ -511,6 +559,9 @@
   .w-74 {
     width: calc(var(--spacing) * 74);
   }
+  .w-76 {
+    width: calc(var(--spacing) * 76);
+  }
   .w-76\.5 {
     width: calc(var(--spacing) * 76.5);
   }
@@ -519,6 +570,9 @@
   }
   .w-159 {
     width: calc(var(--spacing) * 159);
+  }
+  .w-225 {
+    width: calc(var(--spacing) * 225);
   }
   .w-\[18rem\] {
     width: 18rem;
@@ -558,6 +612,9 @@
   }
   .w-\[1100px\] {
     width: 1100px;
+  }
+  .w-auto {
+    width: auto;
   }
   .w-full {
     width: 100%;
@@ -619,6 +676,9 @@
   .flex-1 {
     flex: 1;
   }
+  .flex-shrink {
+    flex-shrink: 1;
+  }
   .shrink-0 {
     flex-shrink: 0;
   }
@@ -627,6 +687,9 @@
   }
   .basis-\[calc\(50\%-0\.375rem\)\] {
     flex-basis: calc(50% - 0.375rem);
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .-rotate-90 {
     rotate: calc(90deg * -1);
@@ -639,6 +702,9 @@
   }
   .cursor-pointer {
     cursor: pointer;
+  }
+  .resize {
+    resize: both;
   }
   .grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
@@ -700,8 +766,14 @@
   .gap-13 {
     gap: calc(var(--spacing) * 13);
   }
+  .gap-16 {
+    gap: calc(var(--spacing) * 16);
+  }
   .gap-16\.5 {
     gap: calc(var(--spacing) * 16.5);
+  }
+  .gap-25 {
+    gap: calc(var(--spacing) * 25);
   }
   .gap-47 {
     gap: calc(var(--spacing) * 47);
@@ -727,6 +799,9 @@
   .rounded-3xl {
     border-radius: var(--radius-3xl);
   }
+  .rounded-4xl {
+    border-radius: var(--radius-4xl);
+  }
   .rounded-\[25px\] {
     border-radius: 25px;
   }
@@ -750,6 +825,18 @@
   .rounded-l-4xl {
     border-top-left-radius: var(--radius-4xl);
     border-bottom-left-radius: var(--radius-4xl);
+  }
+  .rounded-l-xl {
+    border-top-left-radius: var(--radius-xl);
+    border-bottom-left-radius: var(--radius-xl);
+  }
+  .rounded-r-4xl {
+    border-top-right-radius: var(--radius-4xl);
+    border-bottom-right-radius: var(--radius-4xl);
+  }
+  .rounded-r-xl {
+    border-top-right-radius: var(--radius-xl);
+    border-bottom-right-radius: var(--radius-xl);
   }
   .rounded-b-4xl {
     border-bottom-right-radius: var(--radius-4xl);
@@ -852,6 +939,9 @@
   .p-40 {
     padding: calc(var(--spacing) * 40);
   }
+  .p-\[18px\] {
+    padding: 18px;
+  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
@@ -876,6 +966,9 @@
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
   }
+  .py-7 {
+    padding-block: calc(var(--spacing) * 7);
+  }
   .py-7\.5 {
     padding-block: calc(var(--spacing) * 7.5);
   }
@@ -891,11 +984,17 @@
   .py-40 {
     padding-block: calc(var(--spacing) * 40);
   }
+  .py-42 {
+    padding-block: calc(var(--spacing) * 42);
+  }
   .py-42\.5 {
     padding-block: calc(var(--spacing) * 42.5);
   }
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
+  }
+  .pt-22 {
+    padding-top: calc(var(--spacing) * 22);
   }
   .pt-22\.5 {
     padding-top: calc(var(--spacing) * 22.5);
@@ -906,11 +1005,17 @@
   .pt-39 {
     padding-top: calc(var(--spacing) * 39);
   }
+  .pt-42 {
+    padding-top: calc(var(--spacing) * 42);
+  }
   .pt-42\.5 {
     padding-top: calc(var(--spacing) * 42.5);
   }
   .pt-\[94px\] {
     padding-top: 94px;
+  }
+  .pr-46 {
+    padding-right: calc(var(--spacing) * 46);
   }
   .pr-46\.25 {
     padding-right: calc(var(--spacing) * 46.25);
@@ -930,6 +1035,9 @@
   .pb-18 {
     padding-bottom: calc(var(--spacing) * 18);
   }
+  .pl-10 {
+    padding-left: calc(var(--spacing) * 10);
+  }
   .pl-10\! {
     padding-left: calc(var(--spacing) * 10) !important;
   }
@@ -945,6 +1053,9 @@
   .text-center\! {
     text-align: center !important;
   }
+  .text-start {
+    text-align: start;
+  }
   .text-start\! {
     text-align: start !important;
   }
@@ -955,6 +1066,10 @@
   .text-5xl {
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
+  }
+  .text-base {
+    font-size: var(--text-base);
+    line-height: var(--tw-leading, var(--text-base--line-height));
   }
   .text-base\! {
     font-size: var(--text-base) !important;
@@ -1055,12 +1170,20 @@
   .underline {
     text-decoration-line: underline;
   }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .blur {
     --tw-blur: blur(8px);
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
+  }
+  .backdrop-filter {
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
@@ -1153,6 +1276,11 @@
   .max-\[1920px\]\:w-\[350px\] {
     @media (width < 1920px) {
       width: 350px;
+    }
+  }
+  .max-\[1920px\]\:text-\[4rem\] {
+    @media (width < 1920px) {
+      font-size: 4rem;
     }
   }
   .max-\[1820px\]\:right-2 {
@@ -1350,6 +1478,11 @@
       margin-bottom: calc(var(--spacing) * 3);
     }
   }
+  .max-\[1440px\]\:mb-4 {
+    @media (width < 1440px) {
+      margin-bottom: calc(var(--spacing) * 4);
+    }
+  }
   .max-\[1440px\]\:mb-6 {
     @media (width < 1440px) {
       margin-bottom: calc(var(--spacing) * 6);
@@ -1363,6 +1496,11 @@
   .max-\[1440px\]\:mb-10 {
     @media (width < 1440px) {
       margin-bottom: calc(var(--spacing) * 10);
+    }
+  }
+  .max-\[1440px\]\:mb-11 {
+    @media (width < 1440px) {
+      margin-bottom: calc(var(--spacing) * 11);
     }
   }
   .max-\[1440px\]\:mb-12 {
@@ -1453,6 +1591,16 @@
   .max-\[1440px\]\:h-90 {
     @media (width < 1440px) {
       height: calc(var(--spacing) * 90);
+    }
+  }
+  .max-\[1440px\]\:h-97\.5 {
+    @media (width < 1440px) {
+      height: calc(var(--spacing) * 97.5);
+    }
+  }
+  .max-\[1440px\]\:h-107\.5 {
+    @media (width < 1440px) {
+      height: calc(var(--spacing) * 107.5);
     }
   }
   .max-\[1440px\]\:h-108 {
@@ -1585,9 +1733,34 @@
       width: calc(var(--spacing) * 108);
     }
   }
+  .max-\[1440px\]\:w-109 {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 109);
+    }
+  }
+  .max-\[1440px\]\:w-119 {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 119);
+    }
+  }
   .max-\[1440px\]\:w-120 {
     @media (width < 1440px) {
       width: calc(var(--spacing) * 120);
+    }
+  }
+  .max-\[1440px\]\:w-129 {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 129);
+    }
+  }
+  .max-\[1440px\]\:w-139 {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 139);
+    }
+  }
+  .max-\[1440px\]\:w-159 {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 159);
     }
   }
   .max-\[1440px\]\:w-\[182px\] {
@@ -1710,6 +1883,36 @@
       gap: calc(var(--spacing) * 5);
     }
   }
+  .max-\[1440px\]\:gap-12 {
+    @media (width < 1440px) {
+      gap: calc(var(--spacing) * 12);
+    }
+  }
+  .max-\[1440px\]\:gap-15 {
+    @media (width < 1440px) {
+      gap: calc(var(--spacing) * 15);
+    }
+  }
+  .max-\[1440px\]\:gap-16 {
+    @media (width < 1440px) {
+      gap: calc(var(--spacing) * 16);
+    }
+  }
+  .max-\[1440px\]\:gap-17 {
+    @media (width < 1440px) {
+      gap: calc(var(--spacing) * 17);
+    }
+  }
+  .max-\[1440px\]\:gap-18 {
+    @media (width < 1440px) {
+      gap: calc(var(--spacing) * 18);
+    }
+  }
+  .max-\[1440px\]\:gap-20 {
+    @media (width < 1440px) {
+      gap: calc(var(--spacing) * 20);
+    }
+  }
   .max-\[1440px\]\:overflow-auto {
     @media (width < 1440px) {
       overflow: auto;
@@ -1734,6 +1937,30 @@
     @media (width < 1440px) {
       border-top-left-radius: var(--radius-3xl);
       border-top-right-radius: var(--radius-3xl);
+    }
+  }
+  .max-\[1440px\]\:rounded-l-3xl {
+    @media (width < 1440px) {
+      border-top-left-radius: var(--radius-3xl);
+      border-bottom-left-radius: var(--radius-3xl);
+    }
+  }
+  .max-\[1440px\]\:rounded-l-4xl {
+    @media (width < 1440px) {
+      border-top-left-radius: var(--radius-4xl);
+      border-bottom-left-radius: var(--radius-4xl);
+    }
+  }
+  .max-\[1440px\]\:rounded-r-3xl {
+    @media (width < 1440px) {
+      border-top-right-radius: var(--radius-3xl);
+      border-bottom-right-radius: var(--radius-3xl);
+    }
+  }
+  .max-\[1440px\]\:rounded-r-xl {
+    @media (width < 1440px) {
+      border-top-right-radius: var(--radius-xl);
+      border-bottom-right-radius: var(--radius-xl);
     }
   }
   .max-\[1440px\]\:rounded-b-3xl {
@@ -1908,6 +2135,12 @@
     @media (width < 1440px) {
       font-size: var(--text-xl);
       line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .max-\[1440px\]\:text-xs {
+    @media (width < 1440px) {
+      font-size: var(--text-xs);
+      line-height: var(--tw-leading, var(--text-xs--line-height));
     }
   }
   .max-\[1440px\]\:text-\[0\.625rem\] {
@@ -2120,6 +2353,11 @@
       height: calc(var(--spacing) * 55);
     }
   }
+  .max-\[1024px\]\:h-73\.5 {
+    @media (width < 1024px) {
+      height: calc(var(--spacing) * 73.5);
+    }
+  }
   .max-\[1024px\]\:h-80 {
     @media (width < 1024px) {
       height: calc(var(--spacing) * 80);
@@ -2163,6 +2401,11 @@
   .max-\[1024px\]\:w-81 {
     @media (width < 1024px) {
       width: calc(var(--spacing) * 81);
+    }
+  }
+  .max-\[1024px\]\:w-86 {
+    @media (width < 1024px) {
+      width: calc(var(--spacing) * 86);
     }
   }
   .max-\[1024px\]\:w-88 {
@@ -2282,6 +2525,18 @@
       border-bottom-left-radius: var(--radius-3xl);
     }
   }
+  .max-\[1024px\]\:rounded-l-xl {
+    @media (width < 1024px) {
+      border-top-left-radius: var(--radius-xl);
+      border-bottom-left-radius: var(--radius-xl);
+    }
+  }
+  .max-\[1024px\]\:rounded-r-xl {
+    @media (width < 1024px) {
+      border-top-right-radius: var(--radius-xl);
+      border-bottom-right-radius: var(--radius-xl);
+    }
+  }
   .max-\[1024px\]\:rounded-b-3xl {
     @media (width < 1024px) {
       border-bottom-right-radius: var(--radius-3xl);
@@ -2321,6 +2576,11 @@
   .max-\[1024px\]\:px-8 {
     @media (width < 1024px) {
       padding-inline: calc(var(--spacing) * 8);
+    }
+  }
+  .max-\[1024px\]\:px-10 {
+    @media (width < 1024px) {
+      padding-inline: calc(var(--spacing) * 10);
     }
   }
   .max-\[1024px\]\:py-3 {
@@ -2367,6 +2627,12 @@
     @media (width < 1024px) {
       font-size: var(--text-2xl);
       line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
+  .max-\[1024px\]\:text-4xl {
+    @media (width < 1024px) {
+      font-size: var(--text-4xl);
+      line-height: var(--tw-leading, var(--text-4xl--line-height));
     }
   }
   .max-\[1024px\]\:text-base\! {
@@ -2488,6 +2754,11 @@
       margin-bottom: calc(var(--spacing) * -3);
     }
   }
+  .max-\[768px\]\:mb-0 {
+    @media (width < 768px) {
+      margin-bottom: calc(var(--spacing) * 0);
+    }
+  }
   .max-\[768px\]\:mb-2 {
     @media (width < 768px) {
       margin-bottom: calc(var(--spacing) * 2);
@@ -2506,6 +2777,11 @@
   .max-\[768px\]\:mb-6 {
     @media (width < 768px) {
       margin-bottom: calc(var(--spacing) * 6);
+    }
+  }
+  .max-\[768px\]\:mb-7 {
+    @media (width < 768px) {
+      margin-bottom: calc(var(--spacing) * 7);
     }
   }
   .max-\[768px\]\:mb-8 {
@@ -2803,6 +3079,18 @@
       border-radius: var(--radius-xl);
     }
   }
+  .max-\[768px\]\:rounded-l-xl {
+    @media (width < 768px) {
+      border-top-left-radius: var(--radius-xl);
+      border-bottom-left-radius: var(--radius-xl);
+    }
+  }
+  .max-\[768px\]\:rounded-r-xl {
+    @media (width < 768px) {
+      border-top-right-radius: var(--radius-xl);
+      border-bottom-right-radius: var(--radius-xl);
+    }
+  }
   .max-\[768px\]\:rounded-b-3xl {
     @media (width < 768px) {
       border-bottom-right-radius: var(--radius-3xl);
@@ -2984,6 +3272,18 @@
     @media (width < 768px) {
       overflow-wrap: normal;
       word-break: normal;
+    }
+  }
+  .max-\[768x\]\:rounded-l-xl {
+    @media (width < 768x) {
+      border-top-left-radius: var(--radius-xl);
+      border-bottom-left-radius: var(--radius-xl);
+    }
+  }
+  .max-\[768x\]\:rounded-r-xl {
+    @media (width < 768x) {
+      border-top-right-radius: var(--radius-xl);
+      border-bottom-right-radius: var(--radius-xl);
     }
   }
   .min-\[1024px\]\:max-h-245 {
@@ -3689,6 +3989,11 @@ button {
   syntax: "*";
   inherits: false;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-blur {
   syntax: "*";
   inherits: false;
@@ -3742,6 +4047,42 @@ button {
   syntax: "*";
   inherits: false;
 }
+@property --tw-backdrop-blur {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-brightness {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-contrast {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-grayscale {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-hue-rotate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-invert {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-opacity {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-saturate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-sepia {
+  syntax: "*";
+  inherits: false;
+}
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
@@ -3753,6 +4094,7 @@ button {
       --tw-border-style: solid;
       --tw-leading: initial;
       --tw-font-weight: initial;
+      --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
       --tw-contrast: initial;
@@ -3766,6 +4108,15 @@ button {
       --tw-drop-shadow-color: initial;
       --tw-drop-shadow-alpha: 100%;
       --tw-drop-shadow-size: initial;
+      --tw-backdrop-blur: initial;
+      --tw-backdrop-brightness: initial;
+      --tw-backdrop-contrast: initial;
+      --tw-backdrop-grayscale: initial;
+      --tw-backdrop-hue-rotate: initial;
+      --tw-backdrop-invert: initial;
+      --tw-backdrop-opacity: initial;
+      --tw-backdrop-saturate: initial;
+      --tw-backdrop-sepia: initial;
     }
   }
 }
