--- a/css/output.css
+++ b/css/output.css
@@ -10,7 +10,6 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-md: 28rem;
-    --container-3xl: 48rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
@@ -2200,6 +2199,11 @@
       width: calc(var(--spacing) * 61);
     }
   }
+  .max-\[1024px\]\:w-76\.5 {
+    @media (width < 1024px) {
+      width: calc(var(--spacing) * 76.5);
+    }
+  }
   .max-\[1024px\]\:w-86 {
     @media (width < 1024px) {
       width: calc(var(--spacing) * 86);
@@ -2430,6 +2434,12 @@
     @media (width < 1024px) {
       font-size: var(--text-xl);
       line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .max-\[1024px\]\:text-xl\! {
+    @media (width < 1024px) {
+      font-size: var(--text-xl) !important;
+      line-height: var(--tw-leading, var(--text-xl--line-height)) !important;
     }
   }
   .max-\[1024px\]\:text-xs {
